# survey-analyzer

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
charts/: chart_generator.py
core/: data_loader.py  statistics.py
docs/: README.md  compare.md  config.md  crosstab.md  demographic-report.md  detect.md  report.md
reports/: docx_builder.py  xlsx_builder.py
